--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.Nectar" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:windowSplashScreenBackground">@color/primaryColor</item>
-        <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_nectar_logo_name</item>
-        <item name="android:windowSplashScreenAnimationDuration">3000</item>
-    </style>
-
+    <style name="Theme.Nectar" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
